# MediaWayland

./: .gitignore  LICENSE  README.md
core/: .gitignore  meson.build
core/.cache/clangd/index/: client.c.FFF345BD5B7691FC.idx  stb_image.h.A102BDB8EA745778.idx  xdg-shell-client-protocol.c.AFBA56BB82233A84.idx  xdg-shell-client-protocol.h.A816A8ABC9B73D03.idx
core/src/: client.c
sample_project/wayland-doc-testings/: build_client.sh  build_server.sh  client.c  server.c  wl-display-interface.xml
sample_project/wayland-doc-testings/other-things/: a.out  swap.c
sample_project/wayland-doc-testings/server+client/: build.sh  client
